feat(facility): cache realtime reference data
